--- a/crates/double-int/Cargo.toml
+++ b/crates/double-int/Cargo.toml
@@ -10,10 +10,13 @@ license.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 
+[package.metadata.docs.rs]
+all-features = true
+
 [dependencies]
-serde = { version = "1", default-features = false }
+serde_core = { version = "1", default-features = false }
 
 [dev-dependencies]
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-toml = "0.8"
+toml = "0.9"
