--- a/crates/serde-decimal/Cargo.toml
+++ b/crates/serde-decimal/Cargo.toml
@@ -12,7 +12,6 @@ rust-version.workspace = true
 
 [package.metadata.docs.rs]
 all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 default = []
@@ -20,7 +19,7 @@ rust-decimal-arbitrary-precision = ["rust_decimal/serde-with-arbitrary-precision
 
 [dependencies]
 rust_decimal = { version = "1.33", features = ["serde-with-float", "serde-with-str"] }
-serde = "1"
+serde_core = "1"
 
 [dev-dependencies]
 rust_decimal_macros = "1.33"
